4IW2/exercise-2/reports/pierreribault_esgi-javascript.log
Loading script...
Invalid script: SyntaxError: Unexpected identifier
/Users/karl/projects/2020-2021/esgi-javascript/4IW2/exercise-2/scripts/pierreribault_esgi-javascript.js:23
console.log(type_check_v1(1, "number"))
^^^^^^^

SyntaxError: Unexpected identifier
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at startTest (/executor.js:43:21)
    at process.<anonymous> (/executor.js:120:9)
    at process.emit (events.js:310:20)